--- a/style.css
+++ b/style.css
@@ -29,12 +29,20 @@ main {
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);*/
 }
+.gridelement100 {
+  text-align: center;
+  border: 1px solid black;
+  width: 1%;
+  margin: 0;
+  background-color: aqua;
+}
 .gridelement {
   text-align: center;
   border: 1px solid black;
   width: 10%;
   margin: 0;
   background-color: aqua;
+  /*transition: 0.2s all ease;*/
   /*border-left: 1px solid black;
   border-right: 1px solid black;*/
 }
